# stf-hs

./: .gitignore  README.md  project_brief.md  pyproject.toml
examples/: mvp_config.json
stf_hs/: __init__.py  cli.py  config.py  exporter.py  generator.py  models.py  normalizer.py  simulator.py
stf_hs/sensors/: __init__.py  temperature.py
tests/: test_config.py  test_integration_generate_export.py  test_temperature_sensor.py
