[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stf-hs"
version = "0.1.0"
description = "Smart Test Factory - Hardware Simulation for QA automation workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "simpy>=4.1,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]

[project.scripts]
stf-hs = "stf_hs.cli:main"

[tool.setuptools.packages.find]
include = ["stf_hs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
